[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scripts/TouchUI.gd" type="Script" id=1]
[ext_resource path="res://Sprites/TouchUI/Abilities1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/TouchUI/TouchMovement6.png" type="Texture" id=3]
[ext_resource path="res://Sprites/TouchUI/TouchMovement1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/TouchUI/TouchMovement5.png" type="Texture" id=5]
[ext_resource path="res://Sprites/TouchUI/Abilities12.png" type="Texture" id=6]
[ext_resource path="res://Sprites/TouchUI/TouchMovement8.png" type="Texture" id=7]
[ext_resource path="res://Sprites/TouchUI/Abilities11.png" type="Texture" id=8]
[ext_resource path="res://Sprites/TouchUI/TouchMovement7.png" type="Texture" id=9]
[ext_resource path="res://Sprites/TouchUI/TouchMovement4.png" type="Texture" id=10]
[ext_resource path="res://Sprites/TouchUI/TouchMovement2.png" type="Texture" id=11]
[ext_resource path="res://Sprites/TouchUI/Abilities5.png" type="Texture" id=12]
[ext_resource path="res://Sprites/TouchUI/Abilities8.png" type="Texture" id=13]
[ext_resource path="res://Sprites/TouchUI/Abilities3.png" type="Texture" id=14]
[ext_resource path="res://Sprites/TouchUI/Abilities6.png" type="Texture" id=15]
[ext_resource path="res://Sprites/TouchUI/Abilities7.png" type="Texture" id=16]
[ext_resource path="res://Sprites/TouchUI/Abilities10.png" type="Texture" id=17]
[ext_resource path="res://Sprites/TouchUI/Abilities4.png" type="Texture" id=18]
[ext_resource path="res://Sprites/TouchUI/Abilities9.png" type="Texture" id=19]
[ext_resource path="res://Sprites/TouchUI/TouchMovement3.png" type="Texture" id=20]
[ext_resource path="res://Sprites/TouchUI/Abilities2.png" type="Texture" id=21]
[ext_resource path="res://Sprites/TouchUI/Touch1.png" type="Texture" id=22]
[ext_resource path="res://Sprites/TouchUI/Touch2.png" type="Texture" id=23]

[node name="TouchUI" type="Node2D"]
position = Vector2( 104.118, 75.4185 )
script = ExtResource( 1 )

[node name="Q" type="TouchScreenButton" parent="."]
position = Vector2( 469.15, 191.066 )
normal = ExtResource( 2 )
pressed = ExtResource( 21 )

[node name="W" type="TouchScreenButton" parent="."]
position = Vector2( 512.195, 190.247 )
normal = ExtResource( 14 )
pressed = ExtResource( 18 )

[node name="E" type="TouchScreenButton" parent="."]
position = Vector2( 553.528, 189.791 )
normal = ExtResource( 12 )
pressed = ExtResource( 15 )

[node name="Space" type="TouchScreenButton" parent="."]
position = Vector2( 497.75, 231.898 )
normal = ExtResource( 8 )
pressed = ExtResource( 6 )

[node name="D" type="TouchScreenButton" parent="."]
position = Vector2( 603.568, 231.458 )
normal = ExtResource( 19 )
pressed = ExtResource( 17 )

[node name="R" type="TouchScreenButton" parent="."]
position = Vector2( 596.08, 189.512 )
normal = ExtResource( 16 )
pressed = ExtResource( 13 )

[node name="Up" type="TouchScreenButton" parent="."]
position = Vector2( -65.2001, 157.218 )
normal = ExtResource( 4 )
pressed = ExtResource( 5 )

[node name="Right" type="TouchScreenButton" parent="."]
position = Vector2( -27.1384, 195.373 )
normal = ExtResource( 20 )
pressed = ExtResource( 9 )

[node name="Down" type="TouchScreenButton" parent="."]
position = Vector2( -65.8343, 234.204 )
normal = ExtResource( 11 )
pressed = ExtResource( 3 )

[node name="Left" type="TouchScreenButton" parent="."]
position = Vector2( -105.014, 195.407 )
normal = ExtResource( 10 )
pressed = ExtResource( 7 )

[node name="Controls" type="TouchScreenButton" parent="."]
position = Vector2( 617.258, -74.0695 )
normal = ExtResource( 22 )
pressed = ExtResource( 23 )
[connection signal="pressed" from="Q" to="." method="_on_Q_pressed"]
[connection signal="released" from="Q" to="." method="_on_Q_released"]
[connection signal="pressed" from="W" to="." method="_on_W_pressed"]
[connection signal="released" from="W" to="." method="_on_W_released"]
[connection signal="pressed" from="E" to="." method="_on_E_pressed"]
[connection signal="released" from="E" to="." method="_on_E_released"]
[connection signal="pressed" from="Space" to="." method="_on_Space_pressed"]
[connection signal="released" from="Space" to="." method="_on_Space_released"]
[connection signal="pressed" from="D" to="." method="_on_D_pressed"]
[connection signal="released" from="D" to="." method="_on_D_released"]
[connection signal="pressed" from="R" to="." method="_on_R_pressed"]
[connection signal="released" from="R" to="." method="_on_R_released"]
[connection signal="pressed" from="Up" to="." method="_on_Up_pressed"]
[connection signal="released" from="Up" to="." method="_on_Up_released"]
[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="released" from="Right" to="." method="_on_Right_released"]
[connection signal="pressed" from="Down" to="." method="_on_Down_pressed"]
[connection signal="released" from="Down" to="." method="_on_Down_released"]
[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="released" from="Left" to="." method="_on_Left_released"]
[connection signal="pressed" from="Controls" to="." method="_on_Controls_pressed"]
